removing logic revolving not showing graphs 8 and 9 (piecharts) when "deter modis" with stage were selected as filters

--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -167,8 +167,7 @@
 			size='"small"'
 			legend="true"
 			loading='chart8.loading'
-			object='chart8'
-			ng-if="chart8.showPie">
+			object='chart8'>
 		</pie-chart>
 
 		<pie-chart 
@@ -178,8 +177,7 @@
 			option-but='true'
 			size='"small"'
 			legend="true"
-			loading='chart9.loading'
-			ng-if="chart9.showPie">
+			loading='chart9.loading'>
 		</pie-chart>
 	</div>
 </div>
