final version of the poc

--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -158,6 +158,18 @@
 			label='"Mês"'>
 		</line-chart>
 
+		<line-chart 
+			id="chart10"
+			name='chart10.title' 
+			data="chart10.data"
+			option-but='true'
+			legend='false'
+			loading='chart10.loading'
+			object='chart10'
+			label='"Dia"'
+			measure='"ha"'>
+		</line-chart>
+
 		<pie-chart 
 			id="chart8"
 			name='chart8.title' 
