--- a/app/views/map.html
+++ b/app/views/map.html
@@ -1,3 +1,6 @@
 <!-- <map ng-if="!map.loading"/> -->
 <div id="mapa" resizable ng-style="{ height: windowHeight -84 }"></div>
+<!-- <div id='teste' class="leaflet-box">
+	<uib-datepicker ng-model="dt" class="well well-sm" datepicker-options="options"></uib-datepicker>
+</div> -->
 <spinner ng-if="mapObject.loading"></spinner>
